# solitaire-transmute

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.sh  compare_and_compress.sh
assets/: main.css
docs/: index.html
docs/assets/: KaTeX_Suits-f62861bb3f9f2186.woff2.br  Nishiki_Alchemy-8a0bdcb8a04f8ebd.woff2.br  confetti.min-047f30793dd2f447.js  confetti.min-047f30793dd2f447.js.br  emoji_u1f427-349360930e1420b9.svg.br  emoji_u1f430-09a6c45861cb5e25.svg.br  emoji_u1f981-b99f4761d4d03905.svg.br  emoji_u1f984-e50972ba7a53df71.svg.br  emoji_u1f98a-678c87b7d9d88a16.svg.br  favicon-78763c6c4cb3a95e.ico.br  solitaire-transmute-94acbe0f2b5ade49.js  solitaire-transmute-e25f1b78461ed905.js.br  solitaire-transmute_bg-13807278b8aa99a8.wasm  solitaire-transmute_bg-13807278b8aa99a8.wasm.br  solitaire-transmute_bg-4c201a54ee4f8fcc.wasm  solitaire-transmute_bg-4c201a54ee4f8fcc.wasm.br  solitaire-transmute_bg-6b0a205b7a48238a.wasm  solitaire-transmute_bg-6b0a205b7a48238a.wasm.br  solitaire-transmute_bg-82ccc036ee0537f4.wasm  solitaire-transmute_bg-82ccc036ee0537f4.wasm.br  solitaire-transmute_bg-d4ce47d49fd2d7b3.wasm  solitaire-transmute_bg-d4ce47d49fd2d7b3.wasm.br
src/: main.rs
src/components/: anim.rs  board.rs  card.rs  emoji.rs  help.rs  hero.rs  local_storage.rs  mod.rs  settings.rs  skin.rs  utils.rs  videos.rs
src/game/: board.rs  card.rs  game.rs  mod.rs  settings.rs  skin.rs
