[package]
name = "solitaire-transmute"
version = "0.1.0"
authors = ["Spheniscine <spheniscine@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = [] }
enum-map = "2.7.3"
glam = "0.33.2"
phf = { version = "0.14.0", features = ["macros"] }
serde = "1.0.228"
strum = "0.28.0"
strum_macros = "0.28.0"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
