[package]
name = "solitaire-transmute"
version = "0.1.0"
authors = ["Spheniscine <spheniscine@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.2"
dioxus = { version = "0.6.3", features = [] }
getrandom = { version = "0.4.3", features = ["wasm_js"] }
glam = "0.33.2"
phf = { version = "0.14.0", features = ["macros"] }
rand = "0.10.2"
serde = "1.0.228"
serde_json5 = "0.2.1"
serde_tuple = "1.1.3"
strum = "0.28.0"
strum_macros = "0.28.0"
web-sys = { version = "0.3.103", features = ["Window", "Storage"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
